ربط فواتير الموزعين بالمخزون والمحاسبة ذرياً
